# alpanel

./: .gitignore  AGENTS.md  README.md
backend/: Cargo.toml  build.rs
backend/.cargo/: config.toml
backend/src/: config.rs  frontend.rs  main.rs
backend/src/api/: auth.rs  mod.rs  settings.rs
backend/src/db/: pool.rs
backend/src/dto/: auth_dto.rs  domain_dto.rs  file_dto.rs  mod.rs  mysql_dto.rs  settings_dto.rs  site_dto.rs  user_dto.rs
backend/src/errors/: app_errors.rs  mod.rs
backend/src/handlers/: auth_handler.rs  file_handler.rs  mariadb_handler.rs  mod.rs  mysql_handler.rs  nginx_handler.rs  redis_handler.rs  settings_handler.rs  site_handler.rs  system_handler.rs
backend/src/middleware/: auth.rs  rate_limit.rs
backend/src/models/: domain.rs  mod.rs  site.rs  user.rs
backend/src/modules/: mod.rs
backend/src/repositories/: domain_repository.rs  mod.rs  site_repository.rs  user_repository.rs
backend/src/routes/: auth_routes.rs  file_routes.rs  mariadb_routes.rs  mod.rs  mysql_routes.rs  nginx_routes.rs  redis_routes.rs  settings_routes.rs  site_routes.rs  system_routes.rs
backend/src/services/: auth_service.rs  file_service.rs  mariadb_service.rs  mod.rs  mysql_service.rs  nginx_service.rs  redis_service.rs  settings_service.rs
cli/: Cargo.toml
cli/.cargo/: config.toml
cli/src/: main.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/i18n/: en-US.ts  index.ts  zh-CN.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/pages/: CodeMirrorHost.vue  Cron.vue  (+10 more)
scripts/: alp.sh  build-cli-release.sh  build-release.ps1  build-release.sh  install.sh  wsl-run.ps1
(+3 files in other folders)
